# jakob1379.github.io

./: .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.git-crypt/keys/default/0/: 5054B543587E76CDA4F0B541D6D918CCE349FBBE.gpg
.github/workflows/: gh-deploy.yml  preview.yml
assets/stylesheets/classic/: main.70d17ad7.min.css
assets/stylesheets/modern/: main.f1b6466b.min.css
blog/: index.html  using-secrets-in-dotenv.md~
blog/2025/11/13/using-secrets-in-dotenv/: index.html
blog/archive/2025/: index.html
blog/author/jsg/: index.html
blog/posts/using-secrets-in-dotenv/: index.html
cv/: Jakob_Stender_Guldberg_CV.yml  Jakob_Stender_Gulderg_CV.yml  generic_old.yml  new_cv.yml  schema.json
cv/ai-focused/: ai_dk.yml
cv/rendercv_output/: Jakob_Stender_Guldberg_CV.html  Jakob_Stender_Guldberg_CV.md  Jakob_Stender_Guldberg_CV.typ
cv/vault/ai-focused/: ai_dk.yml  ai_en.yml  answers.md
cv/vault/archive/: cph.yml  cph_motivation.yml  generic_old.yml  hverdagsai_dk.yml  nov.yml  nvofs.yml  ssi.yml  star.yml  tryg.yml
docs/: index.md
docs/blog/: index.md
docs/blog/posts/: using-secrets-in-dotenv.md  working-with-a-forest-in-git.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
jga-blog/: package-lock.json  package.json
overrides/: main.html
overrides/partials/: comments.html
scripts/: minify.py
site/: .authors  404.html  search.json  sitemap.xml
site/assets/javascripts/: bundle.00c35305.min.js
site/assets/javascripts/workers/: search.e2d2d235.min.js
site/blog/: index.html
site/javascripts/: extra.js
stylesheets/: extra.css
tests/: conftest.py  test_parallax.py
