[dependency-groups]
dev = [
  "poethepoet>=0.40.0",
  "prek>=0.2.27",
  "ghp-import"
]

[project]
name = "jga-blog-page"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "zensical>=0.0.15",
  "prek>=0.2.27",
  "pymdown-extensions>=10.20",
  "rendercv[full]>=2.6"
]

[tool.poe.tasks]
# setup
_setup_pre-commit = "pre-commit install"
setup = {sequence = ["_setup_pre-commit"], help = "Setup dev environment"}
# update
update_pre-commit = "pre-commit autoupdate -j0"
update_python_packages = {shell = "uv sync --upgrade && uvx uv-bump"}
update_flake = "nix flake update"
update = {shell = 'set -e; poe update_flake & poe update_pre-commit & poe update_python_packages & wait', help = "Update dependencies in parallel"}
# build
build_rendercv = {shell = 'rendercv render --pdf-path docs/assets/Jakob_Stender_Guldberg_CV.pdf ./cv/Jakob_Stender_Guldberg_CV.yml'}
build_zensical = 'zensical build'
build = {sequence = [
  "build_rendercv",
  "build_zensical"
], help = "Build the CV and the Zensical site."}
# deploy
ghpages_deploy = {shell = "ghp-import -n -p -f site"}
deploy = {deps = [
  "build",
  "ghpages_deploy"
], help = "Build the site and deploy to GitHub Pages.", cmd = "echo Successfully deployed pages!"}
# serve
_zensical_serve = {cmd = "zensical serve"}
serve = {sequence = [
  "build_rendercv",
  "_zensical_serve"
], help = "Serve the Zensical pages locally."}
# clean
_clean_zensical = {shell = 'rm -rf site .cache/zensical .cache/mkdocs .cache/mkdocs-material .cache'}
_clean_rendercv = {shell = 'rm -rf .rendercv .rendercv-cache .cache/rendercv docs/assets/Jakob_Stender_Guldberg_CV.pdf'}
_clean_py = {shell = 'find . -type d -name "__pycache__" -prune -exec rm -rf {} +; find . -type f -name "*.py[co]" -delete'}
clean = {sequence = [
  "_clean_zensical",
  "_clean_rendercv",
  "_clean_py"
], help = "Remove Zensical build/cache, RenderCV artifacts, and Python bytecode caches."}
