[dependency-groups]
dev = [
  "jga-blog-page[test]",
  "poethepoet>=0.40.0",
  "prek>=0.3.0"
]

[project]
name = "jga-blog-page"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "zensical>=0.0.19",
  "pymdown-extensions>=10.20.1",
  "rendercv[full]>=2.6"
]

[project.optional-dependencies]
test = [
  "playwright>=1.57.0",
  "pytest>=9.0.2",
  "pytest-playwright>=0.7.2"
]

[tool.poe.tasks]
# setup
_setup_pre-commit = "pre-commit install"
setup = {sequence = ["_setup_pre-commit"], help = "Setup dev environment"}
# update
update_pre-commit = "pre-commit autoupdate -j0"
update_python_packages = {shell = "uv sync --upgrade && uvx uv-bump"}
update_flake = "nix flake update"
update = {shell = 'set -e; poe update_flake & poe update_pre-commit & poe update_python_packages & wait', help = "Update dependencies in parallel"}
# build
build_rendercv = {shell = 'cd cv && rendercv render --pdf-path ../docs/assets/Jakob_Stender_Guldberg_CV.pdf Jakob_Stender_Guldberg_CV.yml'}
build_zensical = 'zensical build'
minify = {shell = '''
cd site && \
find . -name "*.html" -exec minhtml --minify-js --minify-css {} + && \
find . -name "*.css" -exec minhtml {} +
''', help = "Minify HTML, CSS, and JS files in the built site."}
build = {sequence = [
  "build_rendercv",
  "build_zensical"
], help = "Build the CV and the Zensical site."}
build_prod = {sequence = [
  "build",
  "minify"
], help = "Build and minify for production."}
# deploy
ghpages_deploy = {shell = '''
# Create or update gh-pages branch with site content
git checkout --orphan gh-pages 2>/dev/null || git checkout gh-pages
git rm -rf . || true
cp -r site/* .
git add --all
git commit -m "Deploy $(date +'%Y-%m-%d %H:%M:%S')" --allow-empty
git push origin gh-pages --force
git checkout -
''', help = "Deploy site to GitHub Pages branch"}
deploy = {sequence = [
  "build_prod",
  "ghpages_deploy"
], help = "Build the site (with minification) and deploy to GitHub Pages."}
# serve
_zensical_serve = {cmd = "zensical serve -a localhost:8888"}
serve = {sequence = [
  "build_rendercv",
  "_zensical_serve"
], help = "Serve the Zensical pages locally."}
# test
_test = {cmd = "pytest"}
test = {sequence = [
  "build_zensical",
  "_test"
], help = "Build the site and run Playwright tests."}
# playwright
playwright_install = {cmd = "playwright install", help = "Install Playwright browsers"}
# clean
_clean_zensical = {shell = 'rm -rf site .cache/zensical .cache/mkdocs .cache/mkdocs-material .cache'}
_clean_rendercv = {shell = 'rm -rf .rendercv .rendercv-cache .cache/rendercv docs/assets/Jakob_Stender_Guldberg_CV.pdf'}
_clean_py = {shell = 'find . -type d -name "__pycache__" -prune -exec rm -rf {} +; find . -type f -name "*.py[co]" -delete'}
clean = {sequence = [
  "_clean_zensical",
  "_clean_rendercv",
  "_clean_py"
], help = "Remove Zensical build/cache, RenderCV artifacts, and Python bytecode caches."}

[tool.pytest]
addopts = ["--browser", "chromium", "--browser", "firefox"]
markers = [
  "browser: mark test to run only on specific browser (chromium, firefox, webkit)",
  "viewport: mark test to run with specific viewport size",
  "slow: mark test as slow"
]

[tool.uv.sources]
jga-blog-page = {workspace = true}
